added TOC to EDA

--- a/notebooks/EDA/0.1-critter-EDA.ipynb
+++ b/notebooks/EDA/0.1-critter-EDA.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 516,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I. Goals"
+    "## TOC:\n",
+    "* [I. Goals](#first-bullet)\n",
+    "* [II. Data Extraction](#second-bullet)\n",
+    "* [III. Meet & Greet](#third-bullet)\n",
+    "* [IV. Univariate Analysis](#fourth-bullet)\n",
+    "* [V. Multivariate Analysis](#fifth-bullet)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# I. Goals  <a class=\"anchor\" id=\"first-bullet\"></a>"
    ]
   },
   {
@@ -119,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# II. Data Extraction\n",
+    "# II. Data Extraction <a class=\"anchor\" id=\"second-bullet\"></a>\n",
     "\n",
     "Data from some (all?) stores of the Favoriate chain, across a fixed \n",
     "time range, spread over multiple files and provided by kaggle.\n",
@@ -310,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# III. Meet & Greet\n",
+    "# III. Meet & Greet  <a class=\"anchor\" id=\"third-bullet\"></a>\n",
     "\n",
     "Variables:\n",
     "\n",
@@ -2667,7 +2679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IV. Univariate Distributions"
+    "# IV. Univariate Distributions  <a class=\"anchor\" id=\"fourth-bullet\"></a>"
    ]
   },
   {
@@ -4157,7 +4169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  IV. Multivariate Distribution"
+    "#  V. Multivariate Distribution  <a class=\"anchor\" id=\"fifth-bullet\"></a>"
    ]
   },
   {
